--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <footer id="pagination"></footer>
   </div>
 
-  <script src="src/main/static/js/data.js"></script>
-  <script src="src/main/static/js/ui.js"></script>
-  <script src="src/main/static/js/filters.js"></script>
-  <script src="src/main/static/js/app.js"></script>
+  <script src="./src/main/resources/static/js/data.js"></script>
+  <script src="./src/main/resources/static/js/ui.js"></script>
+  <script src="./src/main/resources/static/js/filters.js"></script>
+  <script src="./src/main/resources/static/js/app.js"></script>
 </body>
 </html>
